--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
     <div class="container">
       <h2>Welcome! Please choose from below:</h2>
       <div class="buttons">
-        <button id="skincare" onclick="init('FuvEvZrEdJ')">Skincare Advisor</button>
-        <button id="makeup" onclick="init('wUKHyrm1SX')">Makeup Virtual Try-On</button>
+        <button id="skincare" onclick="init('aZXOEYwKSn')">Skincare Advisor</button>
+        <button id="makeup" onclick="init('8UJcG6PoPD')">Makeup Virtual Try-On</button>
       </div>
     </div>
 
