--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <h2>Welcome! Please choose from below:</h2>
       <div class="buttons">
         <button id="skincare" onclick="init('aZXOEYwKSn')">Skincare Advisor</button>
-        <button id="makeup" onclick="init('8UJcG6PoPD')">Makeup Virtual Try-On</button>
+        <button id="makeup" onclick="init('wUKHyrm1SX')">Makeup Virtual Try-On</button>
       </div>
     </div>
 
