--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           el.style.display = "none";
         });
 
-        if (partnerId === "FuvEvZrEdJ") {
+        if (partnerId === "aZXOEYwKSn") {
           document.querySelector("#skincare-promo").style.display = "block";
         }
 
