--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 
   <body>
     <div class="container">
-      <h2>Welcome! Please choose from below:</h2>
+      <h2>Welcome! Please choose from below: wUKHyrm1SX</h2>
       <div class="buttons">
         <button id="skincare" onclick="init('aZXOEYwKSn')">Skincare Advisor</button>
-        <button id="makeup" onclick="init('wUKHyrm1SX')">Makeup Virtual Try-On</button>
+        <button id="makeup" onclick="init('aZXOEYwKSn')">Makeup Virtual Try-On</button>
       </div>
     </div>
 
