--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           document.querySelector("#skincare-promo").style.display = "block";
         }
 
-        if (partnerId === "wUKHyrm1SX") {
+        if (partnerId === "aZXOEYwKSn") {
           document.querySelector("#makeup-promo").style.display = "block";
         }
 
