--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         var config = {
           partner_id: partnerId,
           locale: "en",
-          env: "prod",
+          env: "test",
           user_id: "abcd",
           onAddToCart(prods) {
             // Continue only if add ALL to cart is clicked
