--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <h2>Welcome! Please choose from below: wUKHyrm1SX</h2>
       <div class="buttons">
         <button id="skincare" onclick="init('aZXOEYwKSn')">Skincare Advisor</button>
-        <button id="makeup" onclick="init('aZXOEYwKSn')">Makeup Virtual Try-On</button>
+        <button id="makeup" onclick="init('8UJcG6PoPD')">Makeup Virtual Try-On</button>
       </div>
     </div>
 
@@ -154,7 +154,7 @@
           document.querySelector("#skincare-promo").style.display = "block";
         }
 
-        if (partnerId === "aZXOEYwKSn") {
+        if (partnerId === "8UJcG6PoPD") {
           document.querySelector("#makeup-promo").style.display = "block";
         }
 
