--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
     <div class="container">
       <h2>Welcome! Please choose from below: wUKHyrm1SX</h2>
       <div class="buttons">
-        <button id="skincare" onclick="init('aZXOEYwKSn')">Skincare Advisor</button>
-        <button id="makeup" onclick="init('8UJcG6PoPD')">Makeup Virtual Try-On</button>
+        <button id="skincare" onclick="init('8UJcG6PoPD')">Skincare Advisor</button>
+        <button id="makeup" onclick="init('aZXOEYwKSn')">Makeup Virtual Try-On</button>
       </div>
     </div>
 
@@ -150,11 +150,11 @@
           el.style.display = "none";
         });
 
-        if (partnerId === "8UJcG6PoPD") {
+        if (partnerId === "aZXOEYwKSn") {
           document.querySelector("#skincare-promo").style.display = "block";
         }
 
-        if (partnerId === "aZXOEYwKSn") {
+        if (partnerId === "8UJcG6PoPD") {
           document.querySelector("#makeup-promo").style.display = "block";
         }
 
