--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
   <body>
     <div class="container">
-      <h2>Welcome! Please choose from below: wUKHyrm1SX</h2>
+      <h2>Welcome! Please choose from below:</h2>
       <div class="buttons">
         <button id="skincare" onclick="init('8UJcG6PoPD')">Skincare Advisor</button>
         <button id="makeup" onclick="init('aZXOEYwKSn')">Makeup Virtual Try-On</button>
